--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,26 @@
+-i https://pypi.org/simple
+appdirs==1.4.4
+buildozer==1.2.0
+certifi==2020.6.20
+chardet==3.0.4
+cython==0.29.10
+distlib==0.3.1
+docutils==0.16
+ffpyplayer==4.3.1
+filelock==3.0.12
+idna==2.10
+importlib-metadata==2.0.0 ; python_version < '3.8'
+importlib-resources==3.0.0 ; python_version < '3.7'
 invoke==1.4.1
-Cython==0.29.10
-kivy
-kivy-garden
-buildozer
-ffpyplayer
+kivy-deps.angle==0.2.0
+kivy-garden==0.1.4
+kivy==1.11.1
+pexpect==4.8.0
+ptyprocess==0.6.0
+pygments==2.7.1
+requests==2.24.0
+sh==1.14.0
+six==1.15.0
+urllib3==1.25.10
+virtualenv==20.0.33
+zipp==3.3.0 ; python_version < '3.8'
